# pancreas_segmentation

./: .dockerignore  .gitignore  README.md  config.py  craft_datasets.py  ct150_preprocessing.py  predict.py  pyproject.toml  requirements.txt  resize_3d.py  sanity_checks.py  test_train_segmentation.py  train_segmentation.py
.github/: dependabot.yml
.github/actions/release-drafter/: release-drafter.yml
.github/workflows/: release-drafter.yml
config_examples/: config_notile_ds.py  config_tile_ds.py
dataset/: borders.py  craft_datasets.py  ct150_preprocessing.py  pomc_dataset.py  rename_rus2eng.py  saver.py
dataset/ds_augmentation/: classification.py  crop.py  factory.py  interface.py  segmentation.py
dataset/ds_generator/: classification.py  factory.py  interface.py  segmentation.py
dataset/pomc_reader/: classification.py  dicom_nrrd.py  factory.py  interface.py  segmentation.py
dataset/savers/: factory.py  no_tiled.py  tiled.py
docker/: Dockerfile  app
src/pancreas_ai/: config.py
src/pancreas_ai/dataset/: borders.py  (+4 more)
tests/: context.py  test_3d_resize.py  test_3d_rotate.py  test_ct_affine.py  test_labels_affine.py  test_loss.py  test_models_save_load.py
tools/: affine_from_nii.py  categorical_metrics.py  config.py  craft_network.py  evaluate.py  nifti_load_scale_save.py  predict_on_random_data.py  resize_3d.py  sanity_checks.py
tools/craft_network/: __init__.py  att_gate.py  att_unet.py  att_unet_dsv.py  dsv.py  loss.py  unet_classic.py  unet_shortcuts_every_layer.py
tools/predict/: factory.py  predict_no_tile.py  predict_tile.py
(+48 files in other folders)
